kubernetes/admin-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: department
